fix dark mode style

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -44,3 +44,10 @@
   opacity: 1;
   pointer-events: all;
 }
+
+// dark mode
+.dark .modal {
+  &__content {
+    background-color: var(--color-dark);
+  }
+}
