--- a/src/pages/singleLesson/singleLesson.scss
+++ b/src/pages/singleLesson/singleLesson.scss
@@ -42,3 +42,9 @@
     }
   }
 }
+
+// dark mode
+.dark .single-lesson {
+  color: var(--primary-dark);
+  background-color: var(--primary-dark);
+}
